// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Message Formatters formats as JSON (minimal) 1`] = `"[{"ct":"aGVsbG8gd29ybGQ=","from":"EABCDEFabcdef1234567890","id":"msg-123","to":"EXYZabcdef9876543210","typ":"chat.text.v1"},{"ct":"Z29vZGJ5ZSB3b3JsZA==","from":"EXYZabcdef9876543210","id":"msg-456","to":"EABCDEFabcdef1234567890","typ":"chat.text.v1"}]"`;

exports[`Message Formatters formats as JSON (verbose) 1`] = `"[{"createdAt":1700000000000,"ct":"aGVsbG8gd29ybGQ=","from":"EABCDEFabcdef1234567890","id":"msg-123","ksn":0,"sig":["0-abc123def456"],"to":"EXYZabcdef9876543210","ttlMs":60000,"typ":"chat.text.v1"},{"alg":"ECDH-ES+A256GCM","createdAt":1700001000000,"ct":"Z29vZGJ5ZSB3b3JsZA==","ek":"EKephemeral123","from":"EXYZabcdef9876543210","id":"msg-456","ksn":1,"sig":["0-xyz789ghi012"],"to":"EABCDEFabcdef1234567890","ttlMs":60000,"typ":"chat.text.v1"}]"`;

exports[`Message Formatters formats as pretty (no color) 1`] = `
"[
  {
    "id": "msg-123",
    "from": "EABCDEFabcdef1234567890",
    "to": "EXYZabcdef9876543210",
    "typ": "chat.text.v1",
    "ct": "aGVsbG8gd29ybGQ="
  },
  {
    "id": "msg-456",
    "from": "EXYZabcdef9876543210",
    "to": "EABCDEFabcdef1234567890",
    "typ": "chat.text.v1",
    "ct": "Z29vZGJ5ZSB3b3JsZA=="
  }
]"
`;

exports[`Message Formatters formats as pretty (verbose, no color) 1`] = `
"[
  {
    "id": "msg-123",
    "from": "EABCDEFabcdef1234567890",
    "to": "EXYZabcdef9876543210",
    "ct": "aGVsbG8gd29ybGQ=",
    "typ": "chat.text.v1",
    "ttlMs": 60000,
    "createdAt": 1700000000000,
    "sig": [
      "0-abc123def456"
    ],
    "ksn": 0
  },
  {
    "id": "msg-456",
    "from": "EXYZabcdef9876543210",
    "to": "EABCDEFabcdef1234567890",
    "ct": "Z29vZGJ5ZSB3b3JsZA==",
    "typ": "chat.text.v1",
    "ek": "EKephemeral123",
    "alg": "ECDH-ES+A256GCM",
    "ttlMs": 60000,
    "createdAt": 1700001000000,
    "sig": [
      "0-xyz789ghi012"
    ],
    "ksn": 1
  }
]"
`;

exports[`Message Formatters formats as raw (no color) 1`] = `"[{"id":"msg-123","from":"EABCDEFabcdef1234567890","to":"EXYZabcdef9876543210","typ":"chat.text.v1","ct":"aGVsbG8gd29ybGQ="},{"id":"msg-456","from":"EXYZabcdef9876543210","to":"EABCDEFabcdef1234567890","typ":"chat.text.v1","ct":"Z29vZGJ5ZSB3b3JsZA=="}]"`;

exports[`Identity Formatter formats identity as JSON 1`] = `
"{
  "name": "alice",
  "aid": "EABCDEFabcdef1234567890",
  "ksn": 0,
  "metadata": {
    "email": "alice@example.com",
    "createdAt": 1700000000000
  }
}"
`;

exports[`Identity Formatter formats identity as pretty (no color) 1`] = `
"Name: alice
AID: EABCDEFabcdef1234567890
KSN: 0"
`;

exports[`Identity Formatter formats identity as pretty (verbose, no color) 1`] = `
"Name: alice
AID: EABCDEFabcdef1234567890
KSN: 0
Metadata: {
  "email": "alice@example.com",
  "createdAt": 1700000000000
}"
`;

exports[`Identity Formatter formats identity as raw 1`] = `"{"name":"alice","aid":"EABCDEFabcdef1234567890","ksn":0,"metadata":{"email":"alice@example.com","createdAt":1700000000000}}"`;

exports[`Group Formatter formats group as JSON 1`] = `
"{
  "id": "grp-123",
  "name": "Test Group",
  "members": [
    "EABCDEFabcdef1234567890",
    "EXYZabcdef9876543210",
    "E123456789abcdef"
  ],
  "createdAt": 1700000000000
}"
`;

exports[`Group Formatter formats group as pretty (no color) 1`] = `
"ID: grp-123
Name: Test Group
Members: 3
Created: 2023-11-14 22:13:20"
`;

exports[`Group Formatter formats group as pretty (verbose, no color) 1`] = `
"ID: grp-123
Name: Test Group
Members: 3
Created: 2023-11-14 22:13:20

Member AIDs:
  - EABCDEFabcdef1234567890
  - EXYZabcdef9876543210
  - E123456789abcdef"
`;

exports[`Group Formatter formats group as raw 1`] = `"{"id":"grp-123","name":"Test Group","members":["EABCDEFabcdef1234567890","EXYZabcdef9876543210","E123456789abcdef"],"createdAt":1700000000000}"`;
